<resources>
    <string name="app_name">MyWeather</string>
    <string name="action_settings">Settings</string>


    <string name="textEdit">Search</string>
    <string name="up">Update</string>
    <string name="about">Об авторе</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview1">TextView1</string>
    <string name="textview2">TextView2</string>
    <string name="textview3">TextView3</string>
    <string name="textview4">TextView4</string>
    <string name="textview5">TextView5</string>
    <string name="todo2">TODO</string>
</resources>