<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"    >

    <TextView
        android:id="@+id/textRv1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingLeft="2dp"
        android:text="@string/textview1"
        android:gravity="center"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.15" />

    <ImageView
        android:id="@+id/imageViewRv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textRv1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.25"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textRv2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/textview2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewRv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.15" />

    <TextView
        android:id="@+id/textRv3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:gravity="center"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/textview3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textRv2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.15" />

    <TextView
        android:id="@+id/textRv4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/textview4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textRv3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.15" />

    <TextView
        android:id="@+id/textRv5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingRight="2dp"
        android:text="@string/textview5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textRv4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.15"
        android:gravity="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>